[gd_scene load_steps=10 format=2]

[ext_resource path="res://Actor/NPCS/Npc.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Ogre_36x36.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemy attack/OrcAttack_64x64t.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/BitPotionExt.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 22.0907

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[node name="Ogre" type="StaticBody2D"]
script = ExtResource( 1 )
mob = "Ogre"

[node name="Attack" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 4

[node name="Idle" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 4 )

[node name="Hint" type="Label" parent="."]
visible = false
margin_left = -35.0
margin_top = -38.0
margin_right = 104.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 5 )
text = "PRESS [Q] TO MORPH"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_exited" from="Trigger" to="." method="_on_Trigger_body_exited"]
